--- a/src/components/control/TagButton/TagButton.css
+++ b/src/components/control/TagButton/TagButton.css
@@ -8,8 +8,9 @@ locator-tag-button {
     border-radius: var(--evg-border-radius);
     cursor: pointer;
     display: block;
+    font-size: var(--evg-font-size-body-xs);
     font-weight: bold;
-    gap: var(--evg-spacing-sm);
+    ''gap: var(--evg-spacing-sm);
     max-width: 13em;
     overflow: hidden;
     padding: var(--evg-spacing-xs) var(--evg-spacing-lg) var(--evg-spacing-xs)
